# garak

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  devkit
.github/workflows/: cmake.yml
app/: CMakeLists.txt
app/examples/: CMakeLists.txt  scratch.cpp
app/include/starter_app/: version.hpp
app/src/: CMakeLists.txt  main.cpp  version.cpp
app/tests/: CMakeLists.txt  app_version_test.cpp
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake  Utils.cmake
core/: CMakeLists.txt
core/examples/: CMakeLists.txt  scratch.cpp
core/include/starter_core/: version.hpp
core/src/: CMakeLists.txt  version.cpp
core/tests/: CMakeLists.txt  core_version_test.cpp
dev_containers/: Build.Dockerfile  Remote-Dev.Dockerfile
doxygen/: Doxyfile
garak/: CMakeLists.txt
garak/examples/: CMakeLists.txt  scratch.cpp
garak/include/garak/: garak.hpp  version.hpp
garak/include/garak/containers/: module.hpp  thread_safe_dequeue.hpp  thread_safe_map.hpp
garak/include/garak/error/: base_error.hpp  module.hpp  source_location.hpp
garak/include/garak/net/: client.hpp  connection.hpp  error.hpp  interfaces.hpp  message.hpp  module.hpp  packet.hpp  server.hpp
garak/include/garak/utils/: common.hpp  module.hpp  types.hpp  version.hpp
garak/src/: CMakeLists.txt  version.cpp
garak/src/error/: base_error.cpp  source_location.cpp
garak/src/net/: client.cpp  connection.cpp  error.cpp  message.cpp  server.cpp
garak/src/utils/: version.cpp
garak/tests/: CMakeLists.txt  containers_module_test.cpp  utils_test.cpp  version_test.cpp
tooling/: clang.py  cli.py  compiler.py  packager.py  settings.py  utils.py
